# ChatAIAgent

./: .env.example  .gitignore  CLAUDE.md  CONTRACT.md  DESIGN.md  Dockerfile  HACKATHON.md  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: api-contracts.yml
agent/: Dockerfile  main.py  observability.py
agent/dispatch/: factory.py  postgres.py  pubsub.py  sqs.py
agent/evolution/: job.py
agent/graph/: builder.py  context.py  routes.py  state.py
agent/nodes/: act.py  analysis_summary.py  chain_remediate.py  check_plan_cache.py  clarify.py  extract_intent.py  hitl_step_review.py  observe.py  propose_fix.py  report.py  think.py
agent/persistence/: plan_history_repo.py  repo.py
agent/schemas/: entity.py  intent.py
agent/scripts/: export_openapi.py
agent/tests/: test_context.py
agent/tools/: check_permissions.py  create_report.py  fetch_user_profile.py  registry.py
agent/worker/: main.py
design/compaction-inline/: section-4-inline-compaction-message.md
design/e2e/: section-1-scaffold.md
design/policy-plan/: section-4-plan-bubble.md  section-5-event-mapping.md  section-6-agentcore-plan-emit.md
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
e2e/tests/: alerts.spec.ts  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
mock_api/: Dockerfile  main.py
nginx/: nginx.conf.template
remediation_agent/: main.py
reporter_agent/: main.py
scripts/: e2e_distillation.sh
worker_agent/: llm.py  logging_setup.py  main.py
(+65 files in other folders)
