[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=0.1",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis[asyncio]>=5.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
